tests/specs/ecosystem/dc0/dcui/0_1_2.test
dc0/dcui/0.1.2
-- deno.lock --

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /mod.ts:11:17
   | 
11 | export function Button(props: { children: string }) {
   |                 ^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


